List feed items by predefined filters